Updates to Polynomial_Optimization notebook

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -96,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using CSDP\n",
@@ -179,7 +181,7 @@
    "source": [
     "using MultivariateMoments\n",
     "μ3 = -1 * getdual(c3) # /!\\ Need to multiply by -1 because the constraint is \">=\" and not \"<=\"\n",
-    "X3 = SumOfSquares.certificate_monomials(PolyJuMP.getdelegate(c3, :CertMono))\n",
+    "X3 = certificate_monomials(PolyJuMP.getdelegate(c3, :CertMono))\n",
     "ν3 = matmeasure(μ3, X3)\n",
     "extractatoms(ν3, 1e-3) # Returns nothing as the dual is not atomic"
    ]
