Add alternative NLP formulation for Polynomial Optimization notebook

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -87,6 +87,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Surprisingly, with the following equivalent model, [Ipopt](https://github.com/JuliaOpt/Ipopt.jl/) finds the correct optimal solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status = :Optimal\n",
+      "getvalue(a) = 0.00011889415775002371\n",
+      "getvalue(b) = 1.0256125965753107\n",
+      "getobjectivevalue(m) = 3.361333003660522e-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "using JuMP\n",
+    "using Ipopt\n",
+    "m = Model(solver=IpoptSolver(print_level=0))\n",
+    "@variable m a >= 0\n",
+    "@variable m b >= 0\n",
+    "@constraint m a + b >= 1\n",
+    "peval(a, b) = p(x=>a, y=>a)\n",
+    "JuMP.register(m, :peval, 2, peval, autodiff=true)\n",
+    "@NLobjective(m, Min, peval(a, b))\n",
+    "status = solve(m)\n",
+    "@show status\n",
+    "@show getvalue(a)\n",
+    "@show getvalue(b)\n",
+    "@show getobjectivevalue(m);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sum-of-Squares approach\n",
     "\n",
     "We will now see how to find the optimal solution using Sum of Squares Programming.\n",
@@ -95,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +213,7 @@
        "Nullable{MultivariateMoments.AtomicMeasure{Float64,Array{DynamicPolynomials.PolyVar{true},1}}}()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +298,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +344,7 @@
        " -x - 0.9999999999999996y + 1.0000000000569829 == 0\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +382,7 @@
        " -x^2 - 1.0011710975546133y + 1.001090625265065 == 0\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +417,7 @@
        " y^2 - 1.0011710975756178y + 8.047253705778523e-5 == 0\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
