Add checkout instruction to PO notebook

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -4,8 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polynomial Optimization\n",
+    "# Polynomial Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Technical note\n",
     "\n",
+    "The section \"Sum-of-Squares approach\" of notebook uses features of SumOfSquares.jl and PolyJuMP.jl that are not yet released.\n",
+    "Please do the following to use the \"master\" branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Pkg.checkout(\"SumOfSquares\")\n",
+    "Pkg.checkout(\"PolyJuMP\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can undo these with the following two lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Pkg.free(\"SumOfSquares\")\n",
+    "Pkg.free(\"PolyJuMP\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "Consider the polynomial optimization problem of\n",
