Update for PolyJuMP's update to getdelegate

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -267,7 +267,7 @@
    "source": [
     "using MultivariateMoments\n",
     "μ3 = -1 * getdual(c3) # /!\\ Need to multiply by -1 because the constraint is \">=\" and not \"<=\"\n",
-    "X3 = certificate_monomials(PolyJuMP.getdelegate(c3, :CertMono))\n",
+    "X3 = certificate_monomials(PolyJuMP.getdelegate(c3))\n",
     "ν3 = matmeasure(μ3, X3)\n",
     "extractatoms(ν3, 1e-3) # Returns nothing as the dual is not atomic"
    ]
@@ -352,7 +352,7 @@
    "source": [
     "using MultivariateMoments\n",
     "μ5 = -1 * getdual(c5) # /!\\ Need to multiply by -1 because the constraint is \">=\" and not \"<=\"\n",
-    "X5 = certificate_monomials(PolyJuMP.getdelegate(c5, :CertMono))\n",
+    "X5 = certificate_monomials(PolyJuMP.getdelegate(c5))\n",
     "ν5 = matmeasure(μ5, X5)\n",
     "extractatoms(ν5, 1e-3)"
    ]
