Update example notebook

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -11,47 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Technical note\n",
-    "\n",
-    "The section \"Sum-of-Squares approach\" of notebook uses features of SumOfSquares.jl and PolyJuMP.jl that are not yet released.\n",
-    "Please do the following to use the \"master\" branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.checkout(\"SumOfSquares\")\n",
-    "Pkg.checkout(\"PolyJuMP\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can undo these with the following two lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.free(\"SumOfSquares\")\n",
-    "Pkg.free(\"PolyJuMP\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Introduction\n",
     "\n",
     "Consider the polynomial optimization problem of\n",
@@ -126,14 +85,14 @@
     "@show status\n",
     "@show getvalue(a)\n",
     "@show getvalue(b)\n",
-    "@show getobjectivevalue(m);"
+    "@show getobjectivevalue(m);get("
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Surprisingly, with the following equivalent model, [Ipopt](https://github.com/JuliaOpt/Ipopt.jl/) finds the correct optimal solution."
+    "Note that an equivalent problem can be formulated reusing the polynomial `p` as follows:"
    ]
   },
   {
@@ -146,9 +105,9 @@
      "output_type": "stream",
      "text": [
       "status = :Optimal\n",
-      "getvalue(a) = 0.00011889415775002371\n",
-      "getvalue(b) = 1.0256125965753107\n",
-      "getobjectivevalue(m) = 3.361333003660522e-12\n"
+      "getvalue(a) = 0.499999995002878\n",
+      "getvalue(b) = 0.4999999950028773\n",
+      "getobjectivevalue(m) = 0.24999999250431656\n"
      ]
     }
    ],
@@ -159,7 +118,7 @@
     "@variable m a >= 0\n",
     "@variable m b >= 0\n",
     "@constraint m a + b >= 1\n",
-    "peval(a, b) = p(x=>a, y=>a)\n",
+    "peval(a, b) = p(x=>a, y=>b)\n",
     "JuMP.register(m, :peval, 2, peval, autodiff=true)\n",
     "@NLobjective(m, Min, peval(a, b))\n",
     "status = solve(m)\n",
@@ -182,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "using CSDP\n",
@@ -252,22 +209,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Nullable{MultivariateMoments.AtomicMeasure{Float64,Array{DynamicPolynomials.PolyVar{true},1}}}()"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using MultivariateMoments\n",
     "μ3 = -1 * getdual(c3) # /!\\ Need to multiply by -1 because the constraint is \">=\" and not \"<=\"\n",
-    "X3 = certificate_monomials(PolyJuMP.getdelegate(c3))\n",
+    "X3 = certificate_monomials(c3)\n",
     "ν3 = matmeasure(μ3, X3)\n",
     "extractatoms(ν3, 1e-3) # Returns nothing as the dual is not atomic"
    ]
@@ -338,10 +284,9 @@
     {
      "data": {
       "text/plain": [
-       "Nullable{MultivariateMoments.AtomicMeasure{Float64,Array{DynamicPolynomials.PolyVar{true},1}}}(Atomic measure on the variables DynamicPolynomials.PolyVar{true}[x, y] with 2 atoms:\n",
+       "Atomic measure on the variables x, y with 2 atoms:\n",
        " at [-0.00109071, 1.00109] with weight 0.4990820208096022\n",
-       " at [0.99992, 8.03849e-5] with weight 0.5006917404344113\n",
-       ")"
+       " at [0.99992, 8.03849e-5] with weight 0.5006917404344113"
       ]
      },
      "execution_count": 8,
@@ -352,7 +297,7 @@
    "source": [
     "using MultivariateMoments\n",
     "μ5 = -1 * getdual(c5) # /!\\ Need to multiply by -1 because the constraint is \">=\" and not \"<=\"\n",
-    "X5 = certificate_monomials(PolyJuMP.getdelegate(c5))\n",
+    "X5 = certificate_monomials(c5)\n",
     "ν5 = matmeasure(μ5, X5)\n",
     "extractatoms(ν5, 1e-3)"
    ]
@@ -387,7 +332,7 @@
      "data": {
       "text/plain": [
        "Algebraic Set defined by 1 equality\n",
-       " -x - 0.9999999999999996y + 1.0000000000569829 == 0\n"
+       " -x - 0.9999999999999996*y + 1.0000000000569829 == 0\n"
       ]
      },
      "execution_count": 9,
@@ -422,10 +367,10 @@
      "data": {
       "text/plain": [
        "Algebraic Set defined by 4 equalities\n",
-       " -x - 1.0000000000000002y + 1.0000000002403162 == 0\n",
-       " -y^2 + 1.0011710975756178y - 8.047253705778523e-5 == 0\n",
-       " -xy - 3.157029709751049e-12y + 0.0001853598953271854 == 0\n",
-       " -x^2 - 1.0011710975546133y + 1.001090625265065 == 0\n"
+       " -x - 1.0000000000000002*y + 1.0000000002403162 == 0\n",
+       " -y^2 + 1.0011710975756178*y - 8.047253705778523e-5 == 0\n",
+       " -x*y - 3.157029709751049e-12*y + 0.0001853598953271854 == 0\n",
+       " -x^2 - 1.0011710975546133*y + 1.001090625265065 == 0\n"
       ]
      },
      "execution_count": 10,
@@ -459,8 +404,8 @@
      "data": {
       "text/plain": [
        "Algebraic Set defined by 2 equalities\n",
-       " x + 1.0000000000000002y - 1.0000000002403162 == 0\n",
-       " y^2 - 1.0011710975756178y + 8.047253705778523e-5 == 0\n"
+       " x + 1.0000000000000002*y - 1.0000000002403162 == 0\n",
+       " y^2 - 1.0011710975756178*y + 8.047253705778523e-5 == 0\n"
       ]
      },
      "execution_count": 11,
@@ -469,8 +414,8 @@
     }
    ],
    "source": [
-    "SemialgebraicSets.computegröbnerbasis!(ideal(get(ν5.support)))\n",
-    "get(ν5.support)"
+    "SemialgebraicSets.computegröbnerbasis!(ideal(ν5.support))\n",
+    "ν5.support"
    ]
   },
   {
@@ -495,15 +440,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.2",
+   "display_name": "Julia 1.0.0",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.0"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.2"
+   "version": "1.0.0"
   }
  },
  "nbformat": 4,
