[ci skip] Update list of solvers link

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -147,7 +147,7 @@
     "## Sum-of-Squares approach\n",
     "\n",
     "We will now see how to find the optimal solution using Sum of Squares Programming.\n",
-    "We first need to pick an SDP solver, see [here](http://www.juliaopt.org/) for a list of the available choices."
+    "We first need to pick an SDP solver, see [here](http://www.juliaopt.org/JuMP.jl/dev/installation/#Getting-Solvers-1) for a list of the available choices."
    ]
   },
   {
