--- a/examples/motzkin.ipynb
+++ b/examples/motzkin.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using SumOfSquares, CSDP\n",
@@ -62,8 +64,8 @@
    },
    "outputs": [],
    "source": [
-    "using SumOfSquares, MathOptInterfaceMosek\n",
-    "factory = with_optimizer(MosekOptimizer);"
+    "using SumOfSquares, MosekTools\n",
+    "factory = with_optimizer(Mosek.Optimizer);"
    ]
   },
   {
@@ -74,10 +76,10 @@
     {
      "data": {
       "text/latex": [
-       "$ (1)x^{4}y^{2} + (1)x^{2}y^{4} + (-3)x^{2}y^{2} + (1) \\in SOSCone() $"
+       "$ (1)x^{4}y^{2} + (1)x^{2}y^{4} + (-3)x^{2}y^{2} + (1) \\text{ is SOS} $"
       ],
       "text/plain": [
-       "(1)x⁴y² + (1)x²y⁴ + (-3)x²y² + (1) ∈ SOSCone()"
+       "(1)x⁴y² + (1)x²y⁴ + (-3)x²y² + (1) is SOS"
       ]
      },
      "execution_count": 3,
@@ -186,10 +188,10 @@
     {
      "data": {
       "text/latex": [
-       "$ (1)x^{6}y^{2} + (2)x^{4}y^{4} + (1)x^{2}y^{6} + (-3)x^{4}y^{2} + (-3)x^{2}y^{4} + (1)x^{2} + (1)y^{2} \\in SOSCone() $"
+       "$ (1)x^{6}y^{2} + (2)x^{4}y^{4} + (1)x^{2}y^{6} + (-3)x^{4}y^{2} + (-3)x^{2}y^{4} + (1)x^{2} + (1)y^{2} \\text{ is SOS} $"
       ],
       "text/plain": [
-       "(1)x⁶y² + (2)x⁴y⁴ + (1)x²y⁶ + (-3)x⁴y² + (-3)x²y⁴ + (1)x² + (1)y² ∈ SOSCone()"
+       "(1)x⁶y² + (2)x⁴y⁴ + (1)x²y⁶ + (-3)x⁴y² + (-3)x²y⁴ + (1)x² + (1)y² is SOS"
       ]
      },
      "execution_count": 7,
@@ -373,10 +375,10 @@
     {
      "data": {
       "text/latex": [
-       "$ (noname)x^{2} + (noname)xy + (noname)y^{2} + (noname)x + (noname)y + (noname - 1) \\in SOSCone() $"
+       "$ (noname)x^{2} + (noname)xy + (noname)y^{2} + (noname)x + (noname)y + (noname - 1) \\text{ is SOS} $"
       ],
       "text/plain": [
-       "(noname)x² + (noname)xy + (noname)y² + (noname)x + (noname)y + (noname - 1) ∈ SOSCone()"
+       "(noname)x² + (noname)xy + (noname)y² + (noname)x + (noname)y + (noname - 1) is SOS"
       ]
      },
      "execution_count": 13,
@@ -396,10 +398,10 @@
     {
      "data": {
       "text/latex": [
-       "$ (noname)x^{6}y^{2} + (noname)x^{5}y^{3} + (noname + noname)x^{4}y^{4} + (noname)x^{3}y^{5} + (noname)x^{2}y^{6} + (noname)x^{5}y^{2} + (noname)x^{4}y^{3} + (noname)x^{3}y^{4} + (noname)x^{2}y^{5} + (-3 noname + noname)x^{4}y^{2} + (-3 noname)x^{3}y^{3} + (-3 noname + noname)x^{2}y^{4} + (-3 noname)x^{3}y^{2} + (-3 noname)x^{2}y^{3} + (-3 noname)x^{2}y^{2} + (noname)x^{2} + (noname)xy + (noname)y^{2} + (noname)x + (noname)y + (noname) \\in SOSCone() $"
+       "$ (noname)x^{6}y^{2} + (noname)x^{5}y^{3} + (noname + noname)x^{4}y^{4} + (noname)x^{3}y^{5} + (noname)x^{2}y^{6} + (noname)x^{5}y^{2} + (noname)x^{4}y^{3} + (noname)x^{3}y^{4} + (noname)x^{2}y^{5} + (-3 noname + noname)x^{4}y^{2} + (-3 noname)x^{3}y^{3} + (-3 noname + noname)x^{2}y^{4} + (-3 noname)x^{3}y^{2} + (-3 noname)x^{2}y^{3} + (-3 noname)x^{2}y^{2} + (noname)x^{2} + (noname)xy + (noname)y^{2} + (noname)x + (noname)y + (noname) \\text{ is SOS} $"
       ],
       "text/plain": [
-       "(noname)x⁶y² + (noname)x⁵y³ + (noname + noname)x⁴y⁴ + (noname)x³y⁵ + (noname)x²y⁶ + (noname)x⁵y² + (noname)x⁴y³ + (noname)x³y⁴ + (noname)x²y⁵ + (-3 noname + noname)x⁴y² + (-3 noname)x³y³ + (-3 noname + noname)x²y⁴ + (-3 noname)x³y² + (-3 noname)x²y³ + (-3 noname)x²y² + (noname)x² + (noname)xy + (noname)y² + (noname)x + (noname)y + (noname) ∈ SOSCone()"
+       "(noname)x⁶y² + (noname)x⁵y³ + (noname + noname)x⁴y⁴ + (noname)x³y⁵ + (noname)x²y⁶ + (noname)x⁵y² + (noname)x⁴y³ + (noname)x³y⁴ + (noname)x²y⁵ + (-3 noname + noname)x⁴y² + (-3 noname)x³y³ + (-3 noname + noname)x²y⁴ + (-3 noname)x³y² + (-3 noname)x²y³ + (-3 noname)x²y² + (noname)x² + (noname)xy + (noname)y² + (noname)x + (noname)y + (noname) is SOS"
       ]
      },
      "execution_count": 14,
@@ -427,41 +429,36 @@
       "Iter:  2 Ap: 8.28e-01 Pobj:  0.0000000e+00 Ad: 7.89e-01 Dobj:  3.6682062e-01 \n",
       "Iter:  3 Ap: 8.25e-01 Pobj:  0.0000000e+00 Ad: 8.48e-01 Dobj: -4.2971015e-03 \n",
       "Iter:  4 Ap: 7.85e-01 Pobj:  0.0000000e+00 Ad: 8.48e-01 Dobj:  1.9519502e-04 \n",
-      "Iter:  5 Ap: 7.02e-01 Pobj:  0.0000000e+00 Ad: 8.45e-01 Dobj: -1.7443809e-04 \n",
-      "Iter:  6 Ap: 6.84e-01 Pobj:  0.0000000e+00 Ad: 7.45e-01 Dobj:  3.4358336e-05 \n",
-      "Iter:  7 Ap: 6.59e-01 Pobj:  0.0000000e+00 Ad: 7.05e-01 Dobj: -1.2384335e-05 \n",
-      "Iter:  8 Ap: 7.09e-01 Pobj:  0.0000000e+00 Ad: 5.96e-01 Dobj: -8.3434691e-06 \n",
-      "Iter:  9 Ap: 6.92e-01 Pobj:  0.0000000e+00 Ad: 7.86e-01 Dobj:  1.3481647e-06 \n",
-      "Iter: 10 Ap: 7.08e-01 Pobj:  0.0000000e+00 Ad: 6.19e-01 Dobj: -2.1548840e-07 \n",
-      "Iter: 11 Ap: 6.29e-01 Pobj:  0.0000000e+00 Ad: 8.04e-01 Dobj:  1.1903455e-07 \n",
-      "Iter: 12 Ap: 7.27e-01 Pobj:  0.0000000e+00 Ad: 6.16e-01 Dobj: -1.2381464e-08 \n",
-      "Iter: 13 Ap: 8.12e-01 Pobj:  0.0000000e+00 Ad: 8.32e-01 Dobj:  9.7413523e-09 \n",
-      "Iter: 14 Ap: 9.95e-01 Pobj:  0.0000000e+00 Ad: 7.34e-01 Dobj: -1.3544624e-09 \n",
-      "Iter: 15 Ap: 8.69e-01 Pobj:  0.0000000e+00 Ad: 8.37e-01 Dobj:  4.4573378e-10 \n",
-      "Iter: 16 Ap: 1.00e+00 Pobj:  0.0000000e+00 Ad: 7.44e-01 Dobj: -5.8962853e-11 \n",
-      "Iter: 17 Ap: 9.04e-01 Pobj:  0.0000000e+00 Ad: 8.48e-01 Dobj:  1.4847360e-11 \n",
-      "Iter: 18 Ap: 1.00e+00 Pobj:  0.0000000e+00 Ad: 6.95e-01 Dobj: -3.0710574e-12 \n",
-      "Iter: 19 Ap: 3.14e-01 Pobj:  0.0000000e+00 Ad: 7.17e-01 Dobj:  1.5330205e-12 \n",
-      "Iter: 20 Ap: 1.00e+00 Pobj:  0.0000000e+00 Ad: 5.72e-01 Dobj:  1.0524669e-13 \n",
-      "Iter: 21 Ap: 1.63e-01 Pobj:  0.0000000e+00 Ad: 7.89e-01 Dobj:  4.9193670e-13 \n",
-      "Iter: 22 Ap: 2.57e-03 Pobj:  0.0000000e+00 Ad: 6.40e-02 Dobj:  1.9940780e-13 \n",
-      "Iter: 23 Ap: 8.81e-04 Pobj:  0.0000000e+00 Ad: 7.35e-02 Dobj:  5.4491802e-13 \n",
-      "Iter: 24 Ap: 2.41e-04 Pobj:  0.0000000e+00 Ad: 6.04e-02 Dobj:  1.6075204e-13 \n",
-      "Iter: 25 Ap: 9.54e-05 Pobj:  0.0000000e+00 Ad: 4.69e-02 Dobj:  5.3079195e-13 \n",
-      "Iter: 26 Ap: 1.02e-02 Pobj:  0.0000000e+00 Ad: 3.50e-02 Dobj:  1.6633275e-13 \n",
-      "Iter: 27 Ap: 1.64e-04 Pobj:  0.0000000e+00 Ad: 4.67e-02 Dobj:  4.8774821e-13 \n",
-      "Iter: 28 Ap: 4.51e-04 Pobj:  0.0000000e+00 Ad: 3.79e-02 Dobj:  1.8888476e-13 \n",
-      "Iter: 29 Ap: 7.17e-02 Pobj:  0.0000000e+00 Ad: 1.07e-01 Dobj:  4.2037461e-13 \n",
-      "Iter: 30 Ap: 1.27e-03 Pobj:  0.0000000e+00 Ad: 1.21e-02 Dobj:  2.1789666e-13 \n",
-      "Iter: 31 Ap: 1.31e-02 Pobj:  0.0000000e+00 Ad: 1.12e-02 Dobj:  4.1952987e-13 \n",
-      "Iter: 32 Ap: 3.55e-03 Pobj:  0.0000000e+00 Ad: 1.63e-02 Dobj:  2.2854646e-13 \n",
-      "Iter: 33 Ap: 2.81e-02 Pobj:  0.0000000e+00 Ad: 2.11e-02 Dobj:  4.0559423e-13 \n",
-      "Iter: 34 Ap: 6.80e-03 Pobj:  0.0000000e+00 Ad: 1.14e-02 Dobj:  2.3248369e-13 \n",
-      "Iter: 35 Ap: 1.98e-02 Pobj:  0.0000000e+00 Ad: 2.91e-02 Dobj:  3.9039048e-13 \n",
-      "Iter: 36 Ap: 1.77e-05 Pobj:  0.0000000e+00 Ad: 1.33e-01 Dobj:  1.1914346e-13 \n",
-      "Iter: 37 Ap: 3.76e-06 Pobj:  0.0000000e+00 Ad: 1.68e-01 Dobj:  2.7067097e-13 \n",
-      "Iter: 38 Ap: 4.49e-04 Pobj:  0.0000000e+00 Ad: 9.15e-02 Dobj:  9.7903487e-14 \n",
-      "Iter: 39 Ap: 1.45e-04 Pobj:  0.0000000e+00 Ad: 1.08e-01 Dobj:  2.2160434e-13 \n",
+      "Iter:  5 Ap: 7.02e-01 Pobj:  0.0000000e+00 Ad: 8.45e-01 Dobj: -1.7443054e-04 \n",
+      "Iter:  6 Ap: 6.84e-01 Pobj:  0.0000000e+00 Ad: 7.45e-01 Dobj:  3.4354877e-05 \n",
+      "Iter:  7 Ap: 6.59e-01 Pobj:  0.0000000e+00 Ad: 7.05e-01 Dobj: -1.2384593e-05 \n",
+      "Iter:  8 Ap: 7.09e-01 Pobj:  0.0000000e+00 Ad: 5.96e-01 Dobj: -8.3434950e-06 \n",
+      "Iter:  9 Ap: 6.92e-01 Pobj:  0.0000000e+00 Ad: 7.86e-01 Dobj:  1.3482976e-06 \n",
+      "Iter: 10 Ap: 7.08e-01 Pobj:  0.0000000e+00 Ad: 6.19e-01 Dobj: -2.1547496e-07 \n",
+      "Iter: 11 Ap: 6.29e-01 Pobj:  0.0000000e+00 Ad: 8.05e-01 Dobj:  1.1922145e-07 \n",
+      "Iter: 12 Ap: 7.29e-01 Pobj:  0.0000000e+00 Ad: 6.16e-01 Dobj: -1.2524057e-08 \n",
+      "Iter: 13 Ap: 8.49e-01 Pobj:  0.0000000e+00 Ad: 8.38e-01 Dobj:  8.7355197e-09 \n",
+      "Iter: 14 Ap: 1.00e+00 Pobj:  0.0000000e+00 Ad: 7.32e-01 Dobj: -1.3938737e-09 \n",
+      "Iter: 15 Ap: 8.46e-01 Pobj:  0.0000000e+00 Ad: 8.14e-01 Dobj:  5.3843217e-10 \n",
+      "Iter: 16 Ap: 1.00e+00 Pobj:  0.0000000e+00 Ad: 7.60e-01 Dobj: -5.6655207e-11 \n",
+      "Iter: 17 Ap: 9.05e-01 Pobj:  0.0000000e+00 Ad: 8.60e-01 Dobj:  1.1193794e-11 \n",
+      "Iter: 18 Ap: 1.00e+00 Pobj:  0.0000000e+00 Ad: 7.25e-01 Dobj: -2.4333986e-12 \n",
+      "Iter: 19 Ap: 6.67e-01 Pobj:  0.0000000e+00 Ad: 7.60e-01 Dobj:  9.9750431e-13 \n",
+      "Iter: 20 Ap: 3.18e-02 Pobj:  0.0000000e+00 Ad: 5.86e-01 Dobj: -3.0148476e-13 \n",
+      "Iter: 21 Ap: 8.80e-02 Pobj:  0.0000000e+00 Ad: 3.28e-01 Dobj:  3.1504853e-13 \n",
+      "Iter: 22 Ap: 3.34e-03 Pobj:  0.0000000e+00 Ad: 3.27e-01 Dobj: -6.7360709e-14 \n",
+      "Iter: 23 Ap: 1.21e-03 Pobj:  0.0000000e+00 Ad: 4.07e-01 Dobj:  1.4309873e-13 \n",
+      "Iter: 24 Ap: 5.29e-04 Pobj:  0.0000000e+00 Ad: 1.98e-01 Dobj: -9.4979405e-14 \n",
+      "Iter: 25 Ap: 2.24e-02 Pobj:  0.0000000e+00 Ad: 1.06e-01 Dobj:  1.0185252e-13 \n",
+      "Iter: 26 Ap: 1.74e-02 Pobj:  0.0000000e+00 Ad: 1.20e-01 Dobj: -6.4880959e-14 \n",
+      "Iter: 27 Ap: 2.36e-02 Pobj:  0.0000000e+00 Ad: 1.49e-01 Dobj:  8.2554804e-14 \n",
+      "Iter: 28 Ap: 2.93e-03 Pobj:  0.0000000e+00 Ad: 1.65e-01 Dobj: -4.8411558e-14 \n",
+      "Iter: 29 Ap: 8.78e-02 Pobj:  0.0000000e+00 Ad: 1.78e-01 Dobj:  4.5825457e-14 \n",
+      "Iter: 30 Ap: 1.32e-03 Pobj:  0.0000000e+00 Ad: 3.17e-01 Dobj: -2.4389675e-14 \n",
+      "Iter: 31 Ap: 4.83e-02 Pobj:  0.0000000e+00 Ad: 2.09e-01 Dobj:  3.0447835e-14 \n",
+      "Iter: 32 Ap: 6.47e-03 Pobj:  0.0000000e+00 Ad: 2.76e-01 Dobj: -1.2564183e-14 \n",
+      "Iter: 33 Ap: 2.78e-03 Pobj:  0.0000000e+00 Ad: 1.90e-01 Dobj:  4.5354455e-15 \n",
+      "Iter: 34 Ap: 1.54e-05 Pobj:  0.0000000e+00 Ad: 7.77e-02 Dobj:  2.5022451e-16 \n",
       "Stuck at edge of primal feasibility, giving up. \n"
      ]
     }
@@ -551,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using RecipesBase\n",
