--- a/examples/Sum-of-Squares Matrices.ipynb
+++ b/examples/Sum-of-Squares Matrices.ipynb
@@ -53,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "using SumOfSquares"
@@ -71,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "using CSDP\n",
@@ -81,11 +81,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "using MathOptInterfaceMosek\n",
-    "factory = with_optimizer(MosekOptimizer, QUIET=true);"
+    "using MosekTools\n",
+    "factory = with_optimizer(Mosek.Optimizer, QUIET=true);"
    ]
   },
   {
@@ -107,8 +109,8 @@
    "source": [
     "model = SOSModel(factory)\n",
     "mat_cref = @constraint(model, P in PSDCone())\n",
-    "JuMP.optimize!(model)\n",
-    "JuMP.termination_status(model)"
+    "optimize!(model)\n",
+    "termination_status(model)"
    ]
   },
   {
@@ -129,10 +131,10 @@
      "data": {
       "text/plain": [
        "4-element MonomialVector{true}:\n",
-       " x##365\n",
        " x##367\n",
-       " ##365 \n",
-       " ##367 "
+       " x##369\n",
+       " ##367 \n",
+       " ##369 "
       ]
      },
      "execution_count": 5,
@@ -141,7 +143,7 @@
     }
    ],
    "source": [
-    "gram_matrix(mat_cref).x"
+    "certificate_monomials(mat_cref)"
    ]
   },
   {
@@ -185,8 +187,11 @@
    "outputs": [
     {
      "data": {
+      "text/latex": [
+       "$ (1)x^{2}y_{1}^{2} + (1)x^{2}y_{2}^{2} + (-2)xy_{1}^{2} + (2)xy_{1}y_{2} + (2)y_{1}^{2} \\text{ is SOS} $"
+      ],
       "text/plain": [
-       "OPTIMAL::TerminationStatusCode = 1"
+       "(1)x²y₁² + (1)x²y₂² + (-2)xy₁² + (2)xy₁y₂ + (2)y₁² is SOS"
       ]
      },
      "execution_count": 7,
@@ -196,9 +201,28 @@
    ],
    "source": [
     "model = SOSModel(factory)\n",
-    "cref = @constraint(model, p in SOSCone())\n",
-    "JuMP.optimize!(model)\n",
-    "JuMP.termination_status(model)"
+    "cref = @constraint(model, p in SOSCone())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OPTIMAL::TerminationStatusCode = 1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimize!(model)\n",
+    "termination_status(model)"
    ]
   },
   {
@@ -210,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +249,13 @@
        " y₂  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getslack(cref).x"
+    "certificate_monomials(cref)"
    ]
   },
   {
@@ -246,15 +270,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.0.3",
+   "display_name": "Julia 1.1.0",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.3"
+   "version": "1.1.0"
   }
  },
  "nbformat": 4,
