Update Polynomial Optimization notebook for JuMP 0.19

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -11,47 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Technical note\n",
-    "\n",
-    "The section \"Sum-of-Squares approach\" of notebook uses features of SumOfSquares.jl and PolyJuMP.jl that are not yet released.\n",
-    "Please do the following to use the \"master\" branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.checkout(\"SumOfSquares\")\n",
-    "Pkg.checkout(\"PolyJuMP\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can undo these with the following two lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Pkg.free(\"SumOfSquares\")\n",
-    "Pkg.free(\"PolyJuMP\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Introduction\n",
     "\n",
     "Consider the polynomial optimization problem of\n",
@@ -93,51 +52,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
+      "\n",
+      "termination_status(model) = LOCALLY_SOLVED::TerminationStatusCode = 4\n",
+      "value(a) = 0.4999999966705758\n",
+      "value(b) = 0.49999999667062867\n",
+      "objective_value(model) = 0.24999999500590342\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.24999999500590342"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using JuMP\n",
     "using Ipopt\n",
-    "m = Model(optimizer=IpoptOptimizer(print_level=0))\n",
-    "@variable m a >= 0\n",
-    "@variable m b >= 0\n",
-    "@constraint m a + b >= 1\n",
-    "@NLobjective(m, Min, a^3 - a^2 + 2a*b - b^2 + b^3)\n",
-    "JuMP.optimize(m)\n",
-    "@show JuMP.terminationstatus(m)\n",
-    "@show JuMP.resultvalue(a)\n",
-    "@show JuMP.resultvalue(b)\n",
-    "@show JuMP.objectivevalue(m);"
+    "model = Model(with_optimizer(Ipopt.Optimizer, print_level=0))\n",
+    "@variable(model, a >= 0)\n",
+    "@variable(model, b >= 0)\n",
+    "@constraint(model, a + b >= 1)\n",
+    "@NLobjective(model, Min, a^3 - a^2 + 2a*b - b^2 + b^3)\n",
+    "optimize!(model)\n",
+    "\n",
+    "@show termination_status(model)\n",
+    "@show value(a)\n",
+    "@show value(b)\n",
+    "@show objective_value(model)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the following equivalent model, [Ipopt](https://github.com/JuliaOpt/Ipopt.jl/) finds the correct optimal solution. The reason (although counter intuitive) of the difference is that with registered functions, only first order derivatives are available."
+    "Note that the problem can be written equivalently as follows using [registered functions](http://www.juliaopt.org/JuMP.jl/v0.19.0/nlp/#User-defined-Functions-1)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "termination_status(model) = LOCALLY_SOLVED::TerminationStatusCode = 4\n",
+      "value(a) = 0.499999995002878\n",
+      "value(b) = 0.4999999950028773\n",
+      "objective_value(model) = 0.24999999250431656\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.24999999250431656"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using JuMP\n",
     "using Ipopt\n",
-    "m = Model(solver=IpoptSolver(print_level=0))\n",
-    "@variable m a >= 0\n",
-    "@variable m b >= 0\n",
-    "@constraint m a + b >= 1\n",
-    "peval(a, b) = p(x=>a, y=>a)\n",
-    "JuMP.register(m, :peval, 2, peval, autodiff=true)\n",
-    "@NLobjective(m, Min, peval(a, b))\n",
-    "status = solve(m)\n",
-    "@show status\n",
-    "@show getvalue(a)\n",
-    "@show getvalue(b)\n",
-    "@show getobjectivevalue(m);"
+    "model = Model(with_optimizer(Ipopt.Optimizer, print_level=0))\n",
+    "@variable(model, a >= 0)\n",
+    "@variable(model, b >= 0)\n",
+    "@constraint(model, a + b >= 1)\n",
+    "peval(a, b) = p(x=>a, y=>b)\n",
+    "register(model, :peval, 2, peval, autodiff=true)\n",
+    "@NLobjective(model, Min, peval(a, b))\n",
+    "optimize!(model)\n",
+    "\n",
+    "@show termination_status(model)\n",
+    "@show value(a)\n",
+    "@show value(b)\n",
+    "@show objective_value(model)"
    ]
   },
   {
@@ -146,32 +158,43 @@
    "source": [
     "## Sum-of-Squares approach\n",
     "\n",
-    "We will now see how to find the optimal solution using Sum of Squares Programming.\n",
+    "We will now see how to find the optimal solution using Sum of Squares Programming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using SumOfSquares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We first need to pick an SDP solver, see [here](http://www.juliaopt.org/JuMP.jl/dev/installation/#Getting-Solvers-1) for a list of the available choices."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "using CSDP\n",
-    "optimizer = CSDPOptimizer(printlevel=0);"
+    "optimizer = with_optimizer(CSDP.Optimizer, printlevel=0);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "using MathOptInterfaceMosek\n",
-    "optimizer = MosekOptimizer(LOG=0);"
+    "using MosekTools\n",
+    "optimizer = with_optimizer(Mosek.Optimizer, QUIET=true);"
    ]
   },
   {
@@ -184,31 +207,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JuMP.terminationstatus(m) = Success::MathOptInterface.TerminationStatusCode = 0\n",
-      "JuMP.objectivevalue(m) = -2.0092666419557759e-10\n"
+      "termination_status(model) = OPTIMAL::TerminationStatusCode = 1\n",
+      "objective_value(model) = -2.0092710828478744e-10\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-2.0092710828478744e-10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "using JuMP\n",
-    "using SumOfSquares\n",
-    "const MOI = MathOptInterface\n",
-    "MOI.empty!(optimizer)\n",
-    "m = SOSModel(optimizer = optimizer)\n",
-    "@variable m α\n",
-    "@objective m Max α\n",
-    "c3 = @constraint m p >= α domain = S\n",
+    "model = SOSModel(optimizer)\n",
+    "@variable(model, α)\n",
+    "@objective(model, Max, α)\n",
+    "@constraint(model, c3, p >= α, domain = S)\n",
     "\n",
-    "JuMP.optimize(m)\n",
-    "@show JuMP.terminationstatus(m)\n",
-    "@show JuMP.objectivevalue(m);"
+    "optimize!(model)\n",
+    "@show termination_status(model)\n",
+    "@show objective_value(model)"
    ]
   },
   {
@@ -223,25 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Nullable{MultivariateMoments.AtomicMeasure{Float64,Array{DynamicPolynomials.PolyVar{true},1}}}()"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using MultivariateMoments\n",
-    "μ3 = JuMP.resultdual(c3)\n",
-    "X3 = certificate_monomials(c3)\n",
-    "ν3 = matmeasure(μ3, X3)\n",
+    "ν3 = moment_matrix(c3)\n",
     "extractatoms(ν3, 1e-3) # Returns nothing as the dual is not atomic"
    ]
   },
@@ -268,31 +284,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JuMP.terminationstatus(m) = Success::MathOptInterface.TerminationStatusCode = 0\n",
-      "JuMP.objectivevalue(m) = -8.707343734926098e-10\n"
+      "termination_status(model) = OPTIMAL::TerminationStatusCode = 1\n",
+      "objective_value(model) = 8.700006062680539e-8\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8.700006062680539e-8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "using JuMP\n",
-    "using SumOfSquares\n",
-    "const MOI = MathOptInterface\n",
-    "MOI.empty!(optimizer)\n",
-    "m = SOSModel(optimizer = optimizer)\n",
-    "@variable m α\n",
-    "@objective m Max α\n",
-    "c5 = @constraint m p >= α domain = S maxdegree = 5\n",
+    "model = SOSModel(optimizer)\n",
+    "@variable(model, α)\n",
+    "@objective(model, Max, α)\n",
+    "@constraint(model, c5, p >= α, domain = S, maxdegree = 5)\n",
     "\n",
-    "JuMP.optimize(m)\n",
-    "@show JuMP.terminationstatus(m)\n",
-    "@show JuMP.objectivevalue(m);"
+    "optimize!(model)\n",
+    "@show termination_status(model)\n",
+    "@show objective_value(model)"
    ]
   },
   {
@@ -307,28 +331,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Nullable{MultivariateMoments.AtomicMeasure{Float64,Array{DynamicPolynomials.PolyVar{true},1}}}(Atomic measure on the variables x, y with 2 atoms:\n",
-       " at [-0.00109073, 1.00109] with weight 0.49908199889134325\n",
-       " at [0.99992, 8.0388e-5] with weight 0.5006917587661682)"
+       "Atomic measure on the variables x, y with 2 atoms:\n",
+       " at [-0.000242397, 1.00024] with weight 0.4936307922624579\n",
+       " at [0.999972, 2.76679e-5] with weight 0.5063248377957446"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "using MultivariateMoments\n",
-    "μ5 = JuMP.resultdual(c5)\n",
-    "X5 = certificate_monomials(c5)\n",
-    "ν5 = matmeasure(μ5, X5)\n",
-    "extractatoms(ν5, 1e-3)"
+    "μ5 = moment_matrix(c5)\n",
+    "extractatoms(μ5, 1e-3)"
    ]
   },
   {
@@ -354,23 +378,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Algebraic Set defined by 1 equality\n",
-       " -x - 1.0000000000000007y + 1.0000000000569826 == 0\n"
+       " -x - 0.9999999999999998*y + 1.0000000000569824 == 0\n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ν3 = matmeasure(μ3, X3)\n",
+    "ν3 = moment_matrix(c3)\n",
     "MultivariateMoments.computesupport!(ν3, 1e-3)"
    ]
   },
@@ -389,26 +413,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Algebraic Set defined by 4 equalities\n",
-       " -x - 0.9999999999999996y + 1.0000000002403562 == 0\n",
-       " -y^2 + 1.0011711224086954y - 8.047569308633484e-5 == 0\n",
-       " -xy + 1.4187906239762362e-12y + 0.00018536057700866868 == 0\n",
-       " -x^2 - 1.0011711224223037y + 1.0010906469640255 == 0\n"
+       " -x - 0.9999999962812296*y + 1.0000000580930948 == 0\n",
+       " -y^2 + 1.0002701267987304*y - 2.7674560303336815e-5 == 0\n",
+       " -x*y - 1.293349230893601e-6*y + 3.3938404378219955e-5 == 0\n",
+       " -x^2 - 1.0002601608230963*y + 1.0002330609868753 == 0\n"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ν5 = matmeasure(μ5, X5)\n",
+    "ν5 = moment_matrix(c5)\n",
     "MultivariateMoments.computesupport!(ν5, 1e-3)"
    ]
   },
@@ -426,25 +450,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Algebraic Set defined by 2 equalities\n",
-       " x + 0.9999999999999996y - 1.0000000002403562 == 0\n",
-       " y^2 - 1.0011711224086954y + 8.047569308633484e-5 == 0\n"
+       " x + 0.9999999962812296*y - 1.0000000580930948 == 0\n",
+       " y^2 - 1.0002701267987304*y + 2.7674560303336815e-5 == 0\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SemialgebraicSets.computegröbnerbasis!(ideal(get(ν5.support)))\n",
-    "get(ν5.support)"
+    "SemialgebraicSets.computegröbnerbasis!(ideal(ν5.support))\n",
+    "ν5.support"
    ]
   },
   {
@@ -456,28 +480,19 @@
     "$$0.5 \\delta(x-1, y) + 0.5 \\delta(x, y-1)$$\n",
     "given in the previous section."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.3",
+   "display_name": "Julia 1.2.0-DEV",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.2"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.3"
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
