more updates, ignoring unupdated solvers

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "using JuMP\n",
     "using Ipopt\n",
-    "model = Model(with_optimizer(Ipopt.Optimizer, print_level=0))\n",
+    "model = Model(optimizer_with_attributes(Ipopt.Optimizer, "print_level" => 0))\n",
     "@variable(model, a >= 0)\n",
     "@variable(model, b >= 0)\n",
     "@constraint(model, a + b >= 1)\n",
@@ -137,7 +137,7 @@
    "source": [
     "using JuMP\n",
     "using Ipopt\n",
-    "model = Model(with_optimizer(Ipopt.Optimizer, print_level=0))\n",
+    "model = Model(optimizer_with_attributes(Ipopt.Optimizer, "print_level" => 0))\n",
     "@variable(model, a >= 0)\n",
     "@variable(model, b >= 0)\n",
     "@constraint(model, a + b >= 1)\n",
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "using CSDP\n",
-    "optimizer = with_optimizer(CSDP.Optimizer, printlevel=0);"
+    "optimizer = optimizer_with_attributes(CSDP.Optimizer, "printlevel" => 0);"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "using MosekTools\n",
-    "optimizer = with_optimizer(Mosek.Optimizer, QUIET=true);"
+    "optimizer = optimizer_with_attributes(Mosek.Optimizer, "QUIET" => true);"
    ]
   },
   {
