--- a/examples/motzkin.ipynb
+++ b/examples/motzkin.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "using SumOfSquares, CSDP\n",
-    "factory = with_optimizer(CSDP.Optimizer);"
+    "factory = CSDP.Optimizer;"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "using SumOfSquares, MosekTools\n",
-    "factory = with_optimizer(Mosek.Optimizer);"
+    "factory = Mosek.Optimizer;"
    ]
   },
   {
