--- a/examples/Sum-of-Squares Matrices.ipynb
+++ b/examples/Sum-of-Squares Matrices.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "using CSDP\n",
-    "factory = with_optimizer(CSDP.Optimizer, printlevel=0);"
+    "factory = optimizer_with_attributes(CSDP.Optimizer, "printlevel" => 0);"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "using MosekTools\n",
-    "factory = with_optimizer(Mosek.Optimizer, QUIET=true);"
+    "factory = optimizer_with_attributes(Mosek.Optimizer, "QUIET" => true);"
    ]
   },
   {
