Implement newton chip

--- a/examples/Noncommutative variables.ipynb
+++ b/examples/Noncommutative variables.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Noncommutative variables\n",
     "\n",
+    "## Example 2.11\n",
+    "\n",
     "We consider the Example 2.11 of [BKP16] in which the polynomial with noncommutative variables\n",
     "$(x * y + x^2)^2 = x^4 + x^3y + xyx^2 + xyxy$ is tested to be sum-of-squares.\n",
     "\n",
@@ -36,7 +38,7 @@
    "source": [
     "using DynamicPolynomials\n",
     "@ncpolyvar x y\n",
-    "p = (x * y + x^2) * (x * y + x^2)"
+    "p = (x * y + x^2)^2"
    ]
   },
   {
@@ -91,8 +93,7 @@
    "source": [
     "using SumOfSquares\n",
     "model = Model(optimizer_constructor)\n",
-    "con_ref = @constraint(model, p in SOSCone(),\n",
-    "    certificate = SumOfSquares.Certificate.MaxDegree(SOSCone(), MonomialBasis, 4))"
+    "con_ref = @constraint(model, p in SOSCone())"
    ]
   },
   {
@@ -119,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "MonomialBasis{Monomial{false},MonomialVector{false}}(Monomial{false}[x², xy, y², yx, x, y, 1])"
+       "MonomialBasis{Monomial{false},MonomialVector{false}}(Monomial{false}[x², xy])"
       ]
      },
      "execution_count": 5,
@@ -146,14 +147,9 @@
     {
      "data": {
       "text/plain": [
-       "7×7 SymMatrix{Float64}:\n",
-       " 1.0  1.0  0.0         0.0         0.0         0.0         0.0       \n",
-       " 1.0  1.0  0.0         0.0         0.0         0.0         0.0       \n",
-       " 0.0  0.0  9.02072e-9  0.0         0.0         0.0         0.0       \n",
-       " 0.0  0.0  0.0         9.02072e-9  0.0         0.0         0.0       \n",
-       " 0.0  0.0  0.0         0.0         9.02072e-9  0.0         0.0       \n",
-       " 0.0  0.0  0.0         0.0         0.0         9.02072e-9  0.0       \n",
-       " 0.0  0.0  0.0         0.0         0.0         0.0         9.02072e-9"
+       "2×2 SymMatrix{Float64}:\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0"
       ]
      },
      "execution_count": 6,
@@ -180,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "(-0.9999999979815454*x^2 - 1.0000000006339345*x*y)^2 + (-7.164435590170406e-5*x^2 + 7.164435571167535e-5*x*y)^2 + (9.49774622097805e-5*x)^2 + (9.49774622097805e-5*y)^2 + (9.49774622097805e-5)^2 + (9.49774622097805e-5*y*x)^2 + (9.49774622097805e-5*y^2)^2"
+       "(-1.0000000000000002*x^2 - x*y)^2 + (-6.265166515512128e-9*x^2 + 6.265166515512127e-9*x*y)^2"
       ]
      },
      "execution_count": 7,
@@ -207,10 +203,149 @@
     {
      "data": {
       "text/plain": [
-       "(-0.9999999979815454*x^2 - 1.0000000006339345*x*y)^2"
+       "(-1.0000000000000002*x^2 - x*y)^2"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sos_decomposition(con_ref, 1e-6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2.2\n",
+    "\n",
+    "We consider now the Example 2.2 of [BKP16] in which the polynomial with noncommutative variables\n",
+    "$(x + x^{10}y^{20}x^{10})^2$ is tested to be sum-of-squares."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ x^{10}y^{20}x^{20}y^{20}x^{10} + x^{11}y^{20}x^{10} + x^{10}y^{20}x^{11} + x^{2} $$"
+      ],
+      "text/plain": [
+       "x¹⁰y²⁰x²⁰y²⁰x¹⁰ + x¹¹y²⁰x¹⁰ + x¹⁰y²⁰x¹¹ + x²"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using DynamicPolynomials\n",
+    "@ncpolyvar x y\n",
+    "n = 10\n",
+    "p = (x + x^n * y^(2n) * x^n)^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$ (1)x^{10}y^{20}x^{20}y^{20}x^{10} + (1)x^{11}y^{20}x^{10} + (1)x^{10}y^{20}x^{11} + (1)x^{2} \\text{ is SOS} $"
+      ],
+      "text/plain": [
+       "(1)x¹⁰y²⁰x²⁰y²⁰x¹⁰ + (1)x¹¹y²⁰x¹⁰ + (1)x¹⁰y²⁰x¹¹ + (1)x² is SOS"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using SumOfSquares\n",
+    "model = Model(optimizer_constructor)\n",
+    "con_ref = @constraint(model, p in SOSCone())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimize!(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only two monomials were considered for the basis of the gram matrix thanks to the Augmented Newton chip method detailed in [Section 2.4, BKP16]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MonomialBasis{Monomial{false},MonomialVector{false}}(Monomial{false}[x¹⁰y²⁰x¹⁰, x])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "certificate_basis(con_ref)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 SymMatrix{Float64}:\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gram_matrix(con_ref).Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.0000000000000002*x^10*y^20*x^10 - x)^2"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
