--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -208,7 +208,7 @@
    "metadata": {},
    "source": [
     "A Sum-of-Squares certificate that $p \\ge \\alpha$ over the domain `S`, ensures that $\\alpha$ is a lower bound to the polynomial optimization problem.\n",
-    "The following program searches for the largest upper bound and find zero."
+    "The following program searches for the largest upper bound and finds zero."
    ]
   },
   {
@@ -273,17 +273,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fortunately, there is a hierarchy of programs with increasingly better programs that can be solved until we get one with atom dual variables.\n",
+    "Fortunately, there is a hierarchy of programs with increasingly better bounds that can be solved until we get one with atom dual variables.\n",
     "This comes from the way the Sum-of-Squares constraint with domain `S` is formulated.\n",
     "The polynomial $p - \\alpha$ is guaranteed to be nonnegative over the domain `S` if there exists Sum-of-Squares polynomials $s_0$, $s_1$, $s_2$, $s_3$ such that\n",
     "$$ p - \\alpha = s_0 + s_1 x + s_2 y + s_3 (x + y - 1). $$\n",
     "Indeed, in the domain `S`, $x$, $y$ and $x + y - 1$ are nonnegative so the right-hand side is a sum of squares hence is nonnegative.\n",
-    "Once the degrees of $s_1$, $s_2$ and $s_3$ have been decided, the degree needed for $s_0$ will be determined but we have a freesom in choosing the degrees of $s_1$, $s_2$ and $s_3$.\n",
+    "Once the degrees of $s_1$, $s_2$ and $s_3$ have been decided, the degree needed for $s_0$ will be determined but we have a freedom in choosing the degrees of $s_1$, $s_2$ and $s_3$.\n",
     "By default, they are chosen so that the degrees of $s_1 x$, $s_2 y$ and $s_3 (x + y - 1)$ match those of $p - \\alpha$ but this can be overwritten using the $maxdegree$ keyword argument.\n",
     "\n",
     "### The maxdegree keyword argument\n",
     "\n",
-    "The maximum total degree (i.e. maximum sum of the exponents of $x$ and $y$) of the monomials of $p$ is 3 so the constraint in the program above is equivalent to `@constraint m p >= α domain = S maxdegree = 3`..\n",
+    "The maximum total degree (i.e. maximum sum of the exponents of $x$ and $y$) of the monomials of $p$ is 3 so the constraint in the program above is equivalent to `@constraint(model, p >= α, domain = S, maxdegree = 3)`.\n",
     "That is, since $x$, $y$ and $x + y - 1$ have total degree 1, the sum of squares polynomials $s_1$, $s_2$ and $s_3$ have been chosen with maximum total degree $2$.\n",
     "Since these polynomials are sums of squares, their degree must be even so the next maximum total degree to try is 4.\n",
     "For this reason, the keywords `maxdegree = 4` and `maxdegree = 5` have the same effect in this example.\n",
@@ -492,15 +492,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.3.1"
   }
  },
  "nbformat": 4,
