[ci skip] Minor improvements to Polynomial_Optimization notebook

--- a/examples/Polynomial_Optimization.ipynb
+++ b/examples/Polynomial_Optimization.ipynb
@@ -359,8 +359,8 @@
    ],
    "source": [
     "using MultivariateMoments\n",
-    "μ5 = moment_matrix(c5)\n",
-    "extractatoms(μ5, 1e-3)"
+    "ν5 = moment_matrix(c5)\n",
+    "extractatoms(ν5, 1e-3)"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "source": [
     "The `extractatoms` function requires a `ranktol` argument that we have set to `1e-3` in the preceding section.\n",
     "This argument is used to transform the dual variable into a system of polynomials equations whose solutions give the atoms.\n",
-    "This transformation uses the SVD decomposition of the matrix of moments and discard the equations corresponding to a singular value lower than `ranktol`.\n",
+    "This transformation uses the SVD decomposition of the moment matrix and discards the equations corresponding to a singular value lower than `ranktol`.\n",
     "When this system of equation has an infinite number of solutions, `extractatoms` concludes that the measure is not atomic.\n",
     "For instance, with `maxdegree = 3`, we obtain the system\n",
     "$$x + y = 1$$\n",
