[ci skip] Add JuliaCon presentation bibtex entry

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,3 +1,10 @@
+@Conference{weisser2019polynomial,
+  author    = {Weisser, Tillmann and Legat, Beno{\^\i}t and Coey, Chris and Kapelevich, Lea and Vielma, Juan Pablo},
+  title     = {Polynomial and Moment Optimization in Julia and JuMP},
+  booktitle = {JuliaCon},
+  year      = {2019},
+  url       = {https://pretalx.com/juliacon2019/talk/QZBKAU/},
+}
 @Conference{legat2017sos,
   author    = {Legat, Beno{\^\i}t and Coey, Chris and Deits, Robin and Huchette, Joey and Perry, Amelia},
   title     = {{Sum-of-squares optimization in Julia}},
